added(execute-api)
To work with API Gateway Resource Policies

--- a/src/options.html
+++ b/src/options.html
@@ -95,6 +95,7 @@ h1 {
 <option value="ecr">EC2 Container Registry</option>
 <option value="ecs">EC2 Container Service</option>
 <option value="ssm">EC2 Systems Manager</option>
+<option value="execute-api">Execute API</option>
 <option value="elasticbeanstalk">Elastic Beanstalk</option>
 <option value="elasticbeanstalk-health">Elastic Beanstalk Health Service</option>
 <option value="ec2">Elastic Compute Cloud (EC2)</option>
